<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ScrollView
        android:id="@+id/scroll_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_laptop"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:src="@drawable/asus_c425"
                tools:ignore="ContentDescription" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/linear_title_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linear_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".75"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_laptop_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/example_laptop_name"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/example_company" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/button_share"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/desc_share_button"
                    android:src="@drawable/ic_baseline_share_24" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/description"
                android:textAllCaps="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/example_long_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/specification"
                android:textAllCaps="true"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray" />

            <TableLayout
                android:id="@+id/table_specification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TableRow
                    android:id="@+id/row_processor"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="@drawable/table_border">

                    <TextView
                        android:padding="8dp"
                        android:text="@string/processor" />

                    <TextView
                        android:id="@+id/text_processors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/table_border"
                        android:padding="8dp"
                        android:text="@string/example_processor"
                        android:textColor="?android:textColorPrimary" />

                </TableRow>

                <TableRow
                    android:id="@+id/row_memory"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="@drawable/table_border">

                    <TextView
                        android:padding="8dp"
                        android:text="@string/memory" />

                    <TextView
                        android:id="@+id/text_memories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/table_border"
                        android:padding="8dp"
                        android:text="@string/example_laptop_memory"
                        android:textColor="?android:textColorPrimary" />

                </TableRow>

                <TableRow
                    android:id="@+id/row_storage"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="@drawable/table_border">

                    <TextView
                        android:padding="8dp"
                        android:text="@string/storage" />

                    <TextView
                        android:id="@+id/text_storages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/table_border"
                        android:padding="8dp"
                        android:text="@string/example_laptop_storages"
                        android:textColor="?android:textColorPrimary" />

                </TableRow>

                <TableRow
                    android:id="@+id/row_display"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="@drawable/table_border">

                    <TextView
                        android:padding="8dp"
                        android:text="@string/display" />

                    <TextView
                        android:id="@+id/text_display"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/table_border"
                        android:padding="8dp"
                        android:text="@string/example_display"
                        android:textColor="?android:textColorPrimary" />

                </TableRow>

                <TableRow
                    android:id="@+id/row_graphic"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="@drawable/table_border">

                    <TextView
                        android:padding="8dp"
                        android:text="@string/graphic" />

                    <TextView
                        android:id="@+id/text_graphics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/table_border"
                        android:padding="8dp"
                        android:text="@string/example_graphics"
                        android:textColor="?android:textColorPrimary" />

                </TableRow>

                <TableRow
                    android:id="@+id/row_colors"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:background="@drawable/table_border">

                    <TextView
                        android:padding="8dp"
                        android:text="@string/color_variant" />

                    <TextView
                        android:id="@+id/text_colors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/table_border"
                        android:padding="8dp"
                        android:text="@string/example_color_variant"
                        android:textColor="?android:textColorPrimary" />

                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="16dp"
                android:text="@string/nothing_here"
                android:textAlignment="center" />

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>