<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.about.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_me"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:src="@drawable/dwichan0905" />

    <TextView
        android:id="@+id/text_my_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_me"
        android:paddingStart="16sp"
        android:paddingTop="16dp"
        android:paddingEnd="16sp"
        android:text="@string/my_name"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_my_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_my_name"
        android:autoLink="email"
        android:text="@string/my_email"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_my_email"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/notes" />
</RelativeLayout>